ENH: added permutation testing

--- a/updrsTapping_predictions.ipynb
+++ b/updrsTapping_predictions.ipynb
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 324,
    "metadata": {},
    "outputs": [
     {
@@ -558,23 +558,10 @@
       "Chance level: 1.421\n",
       "RandomForestClassifier(class_weight='balanced', min_samples_split=5,\n",
       "                       n_estimators=500, random_state=27)\n",
-      "# of samples: train 171, test 57\n",
-      "# true labels 82: chance is 1.4385964912280702\n",
-      "# of samples: train 171, test 57\n",
-      "# true labels 81: chance is 1.4210526315789473\n",
-      "# of samples: train 171, test 57\n",
-      "# true labels 81: chance is 1.4210526315789473\n",
-      "# of samples: train 171, test 57\n",
-      "# true labels 80: chance is 1.4035087719298245\n",
-      "\n",
-      "Confusion Matrix:\n",
-      "Predicted Scores   0   1   2  3-4\n",
-      "True Scores                      \n",
-      "0                  3  20   5    1\n",
-      "1                 11  54  25    8\n",
-      "2                  7  31  33    6\n",
-      "3-4                1   6  12    5\n",
-      "mean UPDRS-penalty: 0.71 (+/- 0.7)\n"
+      "Fold 0: # of samples: train 171, test 57\n",
+      "Fold 1: # of samples: train 171, test 57\n",
+      "Fold 2: # of samples: train 171, test 57\n",
+      "Fold 3: # of samples: train 171, test 57\n"
      ]
     }
    ],
@@ -634,10 +621,10 @@
     "        y_true=y_true_dict, y_pred=y_pred_dict,\n",
     "        labels=mc_labels,\n",
     "    )\n",
-    "    print(f'\\nConfusion Matrix:\\n{cm}')\n",
-    "    mean_pen, std_pen, _ = cv_models.get_penalties_from_conf_matr(cm)\n",
-    "    print(f'mean UPDRS-penalty: {round(mean_pen, 2)}'\n",
-    "            f' (+/- {round(std_pen, 2)})')\n",
+    "    # print(f'\\nConfusion Matrix:\\n{cm}')\n",
+    "    # mean_pen, std_pen, _ = cv_models.get_penalties_from_conf_matr(cm)\n",
+    "    # print(f'mean UPDRS-penalty: {round(mean_pen, 2)}'\n",
+    "    #         f' (+/- {round(std_pen, 2)})')\n",
     "\n"
    ]
   },
@@ -684,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 325,
    "metadata": {},
    "outputs": [
     {
@@ -700,15 +687,7 @@
       "                       n_estimators=500, random_state=27)\n",
       "Fold 0: # of samples: train 112, test 56\n",
       "Fold 1: # of samples: train 112, test 56\n",
-      "Fold 2: # of samples: train 112, test 56\n",
-      "\n",
-      "Confusion Matrix:\n",
-      "Predicted Scores  0-1   2  3-4\n",
-      "True Scores                   \n",
-      "0-1                36  35    6\n",
-      "2                  31  30    8\n",
-      "3-4                10   6    6\n",
-      "mean UPDRS-penalty: 0.67 (+/- 0.64)\n"
+      "Fold 2: # of samples: train 112, test 56\n"
      ]
     }
    ],
@@ -775,10 +754,10 @@
     "        y_true=cv_true, y_pred=cv_pred,\n",
     "        labels=mc_labels,\n",
     "    )\n",
-    "    print(f'\\nConfusion Matrix:\\n{cm}')\n",
-    "    mean_pen, std_pen, _ = cv_models.get_penalties_from_conf_matr(cm)\n",
-    "    print(f'mean UPDRS-penalty: {round(mean_pen, 2)}'\n",
-    "            f' (+/- {round(std_pen, 2)})')"
+    "    # print(f'\\nConfusion Matrix:\\n{cm}')\n",
+    "    # mean_pen, std_pen, _ = cv_models.get_penalties_from_conf_matr(cm)\n",
+    "    # print(f'mean UPDRS-penalty: {round(mean_pen, 2)}'\n",
+    "    #         f' (+/- {round(std_pen, 2)})')"
    ]
   },
   {
@@ -791,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 326,
    "metadata": {},
    "outputs": [
     {
@@ -806,15 +785,7 @@
       "                       n_estimators=500, random_state=27)\n",
       "Fold 0: # of samples: train 37, test 19\n",
       "Fold 1: # of samples: train 37, test 19\n",
-      "Fold 2: # of samples: train 38, test 18\n",
-      "\n",
-      "Confusion Matrix:\n",
-      "Predicted Scores  0-1  2  3-4\n",
-      "True Scores                  \n",
-      "0-1                17  1    2\n",
-      "2                   5  1   10\n",
-      "3-4                 6  5    9\n",
-      "mean UPDRS-penalty: 0.66 (+/- 0.71)\n"
+      "Fold 2: # of samples: train 38, test 18\n"
      ]
     }
    ],
@@ -878,10 +849,10 @@
     "        y_true=y_true_dict, y_pred=y_pred_dict,\n",
     "        labels=mc_labels,\n",
     "    )\n",
-    "    print(f'\\nConfusion Matrix:\\n{cm}')\n",
-    "    mean_pen, std_pen, _ = cv_models.get_penalties_from_conf_matr(cm)\n",
-    "    print(f'mean UPDRS-penalty: {round(mean_pen, 2)}'\n",
-    "            f' (+/- {round(std_pen, 2)})')\n",
+    "    # print(f'\\nConfusion Matrix:\\n{cm}')\n",
+    "    # mean_pen, std_pen, _ = cv_models.get_penalties_from_conf_matr(cm)\n",
+    "    # print(f'mean UPDRS-penalty: {round(mean_pen, 2)}'\n",
+    "    #         f' (+/- {round(std_pen, 2)})')\n",
     "\n"
    ]
   },
@@ -895,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 327,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -904,79 +875,153 @@
     "\n",
     "n_permutations = 200\n",
     "\n",
-    "random_penalties = {'mean': [], 'lists': []}\n",
+    "# random_penalties = {'mean': [], 'lists': []}\n",
     "r_states = np.linspace(0, 1000, n_permutations).astype(int)\n",
-    "for random_shuffle in r_states: \n",
+    "# for random_shuffle in r_states: \n",
     "\n",
-    "    # CLassification Settings\n",
-    "    temp_data = cv_data  # data to use here\n",
-    "    clf_choice = 'RF'\n",
-    "    nFolds = 6\n",
-    "    mask_0 = False\n",
-    "    multiclass = True\n",
-    "    score_to_predict = 1\n",
+    "# CLassification Settings\n",
+    "temp_data = cv_data  # data to use here\n",
+    "clf_choice = 'RF'\n",
+    "nFolds = 6\n",
+    "mask_0 = False\n",
+    "multiclass = True\n",
+    "score_to_predict = 1\n",
     "\n",
-    "    y_model = temp_data.y.copy()\n",
-    "    if mask_0: # mask 0's to 1\n",
-    "        y_model[y_model == 0] = 1\n",
-    "        mc_labels = ['0-1', '2', '3-4']\n",
-    "    else:\n",
-    "        mc_labels = ['0', '1', '2', '3-4']\n",
+    "y_model = temp_data.y.copy()\n",
+    "if mask_0: # mask 0's to 1\n",
+    "    y_model[y_model == 0] = 1\n",
+    "    mc_labels = ['0-1', '2', '3-4']\n",
+    "else:\n",
+    "    mc_labels = ['0', '1', '2', '3-4']\n",
     "\n",
-    "    if not multiclass:\n",
-    "        y_model = y_model == score_to_predict\n",
-    "        to_plot = True\n",
+    "if not multiclass:\n",
+    "    y_model = y_model == score_to_predict\n",
+    "    to_plot = True\n",
     "\n",
-    "        if score_to_predict == 1:\n",
-    "            plot_thresholds = [.65, .7, .75]\n",
-    "            roc_title = f'Identify UPDRS 0/1 vs Rest ({clf_choice})'\n",
+    "    if score_to_predict == 1:\n",
+    "        plot_thresholds = [.65, .7, .75]\n",
+    "        roc_title = f'Identify UPDRS 0/1 vs Rest ({clf_choice})'\n",
     "\n",
-    "        elif score_to_predict == 3:\n",
-    "            plot_thresholds = [.25, .4, .5]\n",
-    "            roc_title = f'Identify UPDRS 3-4 vs Rest ({clf_choice})'\n",
+    "    elif score_to_predict == 3:\n",
+    "        plot_thresholds = [.25, .4, .5]\n",
+    "        roc_title = f'Identify UPDRS 3-4 vs Rest ({clf_choice})'\n",
     "\n",
-    "    # shuffle true y-labels\n",
-    "    np.random.seed(random_shuffle)\n",
-    "    np.random.shuffle(y_model)\n",
-    "    \n",
-    "    # print descriptives\n",
-    "    # n_samples = len(temp_data.ids)\n",
-    "    # print(f'Included # of traces: {n_samples}')\n",
-    "    # y_scores, counts = np.unique(y_model, return_counts=True)\n",
-    "    # for s, c in zip(y_scores, counts):\n",
-    "    #     print(f'\\tscore {s}: # {c} ({round(c / n_samples * 100)} %)')\n",
+    "# # shuffle true y-labels\n",
+    "# np.random.seed(random_shuffle)\n",
+    "# np.random.shuffle(y_model)\n",
+    "\n",
+    "# print descriptives\n",
+    "# n_samples = len(temp_data.ids)\n",
+    "# print(f'Included # of traces: {n_samples}')\n",
+    "# y_scores, counts = np.unique(y_model, return_counts=True)\n",
+    "# for s, c in zip(y_scores, counts):\n",
+    "#     print(f'\\tscore {s}: # {c} ({round(c / n_samples * 100)} %)')\n",
     "\n",
     "\n",
-    "    (y_pred_dict, y_proba_dict,\n",
-    "    y_true_dict, og_pred_idx\n",
-    "    ) = cv_models.get_cvFold_predictions_dicts(\n",
-    "        X_cv=temp_data.X,\n",
-    "        y_cv=y_model,\n",
-    "        cv_method=StratifiedKFold,\n",
-    "        n_folds=nFolds,\n",
-    "        clf=clf_choice,\n",
+    "(y_pred_dict, y_proba_dict,\n",
+    "y_true_dict, og_pred_idx\n",
+    ") = cv_models.get_cvFold_predictions_dicts(\n",
+    "    X_cv=temp_data.X,\n",
+    "    y_cv=y_model,\n",
+    "    cv_method=StratifiedKFold,\n",
+    "    n_folds=nFolds,\n",
+    "    clf=clf_choice,\n",
+    "    verbose=False,\n",
+    ")\n",
+    "if to_plot and not multiclass: \n",
+    "    plot_folds.plot_ROC_AUC_confMatrices_for_folds(\n",
+    "        y_true_dict=y_true_dict,\n",
+    "        y_proba_dict=y_proba_dict,\n",
+    "        plot_thresholds=plot_thresholds,\n",
+    "        roc_title=roc_title,\n",
     "        verbose=False,\n",
     "    )\n",
-    "    if to_plot and not multiclass: \n",
-    "        plot_folds.plot_ROC_AUC_confMatrices_for_folds(\n",
-    "            y_true_dict=y_true_dict,\n",
-    "            y_proba_dict=y_proba_dict,\n",
-    "            plot_thresholds=plot_thresholds,\n",
-    "            roc_title=roc_title,\n",
-    "            verbose=False,\n",
-    "        )\n",
-    "    if multiclass:\n",
-    "        cm = cv_models.multiclass_conf_matrix(\n",
-    "            y_true=y_true_dict, y_pred=y_pred_dict,\n",
-    "            labels=mc_labels,\n",
-    "        )\n",
-    "        # print(f'\\nConfusion Matrix:\\n{cm}')\n",
-    "        mean_pen, std_pen, pen_list = cv_models.get_penalties_from_conf_matr(cm)\n",
-    "        # print(f'mean UPDRS-penalty: {round(mean_pen, 2)}'\n",
-    "        #         f' (+/- {round(std_pen, 2)})')\n",
-    "        random_penalties['mean'].append(mean_pen)\n",
-    "        random_penalties['lists'].append(pen_list)\n",
+    "if multiclass:\n",
+    "    cm = cv_models.multiclass_conf_matrix(\n",
+    "        y_true=y_true_dict, y_pred=y_pred_dict,\n",
+    "        labels=mc_labels,\n",
+    "    )\n",
+    "    # print(f'\\nConfusion Matrix:\\n{cm}')\n",
+    "    mean_pen, std_pen, pen_list = cv_models.get_penalties_from_conf_matr(cm)\n",
+    "    # print(f'mean UPDRS-penalty: {round(mean_pen, 2)}'\n",
+    "    #         f' (+/- {round(std_pen, 2)})')\n",
+    "    \n",
+    "    # random_penalties['mean'].append(mean_pen)\n",
+    "    # random_penalties['lists'].append(pen_list)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 304,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Penalty alpha .05 cut off without distribution knowledge: 1.1336091549295775\n"
+     ]
+    }
+   ],
+   "source": [
+    "penalties_full_chance = []\n",
+    "true_labels = overall_perf['y_true'].values\n",
+    "\n",
+    "r_states = np.linspace(0, 1000, n_permutations).astype(int)\n",
+    "\n",
+    "for r_seed in r_states:\n",
+    "    np.random.seed(r_seed)\n",
+    "    random_labels = np.random.randint(0, 3 + 1, size=len(true_labels))\n",
+    "    diffs = abs(true_labels - random_labels)\n",
+    "    penalties_full_chance.append(diffs.mean())\n",
+    "\n",
+    "print(\n",
+    "    'Penalty alpha .05 cut off without distribution'\n",
+    "    f' knowledge: {np.mean(penalties_full_chance)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 323,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "perm_dir = os.path.join(\n",
+    "    find_onedrive_path('results'),\n",
+    "    'predictions', 'permutations')\n",
+    "perm_fname = f'RF_full_dev_data_{n_permutations}perms_means.csv'\n",
+    "mean_penalties = np.loadtxt(os.path.join(perm_dir, perm_fname))\n",
+    "sign_05 = round(np.percentile(mean_penalties, 5), 2)\n",
+    "\n",
+    "plt.rc('font', size=14)\n",
+    "plt.hist(mean_penalties)\n",
+    "plt.title(f'Alpha .05 significance cut off: {sign_05}', size=14)\n",
+    "ymin, ymax = plt.ylim()\n",
+    "plt.vlines(sign_05, ymin=ymin, ymax=ymax, color='r', ls='--')\n",
+    "plt.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 276,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "importlib.reload(utils_dataManagement)\n",
+    "from retap_utils.utils_dataManagement import find_onedrive_path\n",
+    "\n",
+    "save_dir = os.path.join(\n",
+    "    find_onedrive_path('results'),\n",
+    "    'predictions', 'permutations')\n",
+    "fname = f'RF_full_dev_data_{n_permutations}perms_lists'\n",
+    "\n",
+    "if not os.path.exists(save_dir): os.makedirs(save_dir)\n",
+    "\n",
+    "np.savetxt(\n",
+    "    os.path.join(save_dir, f'{fname}.csv'),\n",
+    "    random_penalties['lists'], delimiter=',',\n",
+    ")\n"
    ]
   },
   {
