creation modular function for reclassification

--- a/updrsTapping_predictions.ipynb
+++ b/updrsTapping_predictions.ipynb
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,13 +189,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# set variables for classification method\n",
     "MAX_TAPS_PER_TRACE = None\n",
-    "USE_FT_CLASS = newFts\n",
+    "USE_FT_CLASS = newFts15\n",
     "DATASPLIT = 'CROSSVAL'  # should be CROSSVAL or HOLDOUT\n",
     "N_RANDOM_SPLIT = 41  # 01.03.23\n",
     "\n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -234,18 +234,18 @@
      "output_type": "stream",
      "text": [
       "SPLITTING DATA IN DEV AND HOLD-OUT\n",
-      "Original score distribution: {0: 40, 1: 149, 2: 106, 3: 55, 4: 1}\n",
-      "Original score %: {0: 11.4, 1: 42.5, 2: 30.2, 3: 15.7, 4: 0.3}\n",
+      "Original score distribution: {0: 40, 1: 148, 2: 107, 3: 53, 4: 3}\n",
+      "Original score %: {0: 11.4, 1: 42.2, 2: 30.5, 3: 15.1, 4: 0.9}\n",
       "Accepted Split: random state 41\n",
       "\n",
       "Resulting distributions in splitted data sets:\n",
       "\n",
       "\tdev data set (n = 263):\n",
       "score 0: # 30 (11 %)\n",
-      "score 1: # 109 (41 %)\n",
-      "score 2: # 81 (31 %)\n",
-      "score 3: # 43 (16 %)\n",
-      "score 4: # 0 (0 %)\n",
+      "score 1: # 108 (41 %)\n",
+      "score 2: # 82 (31 %)\n",
+      "score 3: # 41 (16 %)\n",
+      "score 4: # 2 (1 %)\n",
       "\thout data set (n = 89):\n",
       "score 0: # 10 (11 %)\n",
       "score 1: # 40 (45 %)\n",
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
