--- a/updrsTapping_predictions.ipynb
+++ b/updrsTapping_predictions.ipynb
@@ -152,21 +152,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# 18 included SUBS for BER\n",
+      "# 311 included TRACES for BER\n",
+      "# 19 included SUBS for DUS\n",
+      "# 65 included TRACES for DUS\n"
+     ]
+    }
+   ],
    "source": [
     "subs = []\n",
-    "for t in newFts10.incl_traces:\n",
-    "    subs.append(getattr(newFts10, t).sub)\n",
+    "for t in newFts.incl_traces:\n",
+    "    subs.append(getattr(newFts, t).sub)\n",
     "\n",
     "unique_subs = list(set(subs))\n",
     "\n",
     "for cen in ['BER', 'DUS']:\n",
     "    n = sum([cen in t for t in unique_subs])\n",
-    "    # print(f'# {n} included SUBS for {cen}')\n",
-    "    # n = sum([cen in t for t in newFts10.incl_traces])\n",
-    "    # print(f'# {n} included TRACES for {cen}')"
+    "    print(f'# {n} included SUBS for {cen}')\n",
+    "    n = sum([cen in t for t in newFts.incl_traces])\n",
+    "    print(f'# {n} included TRACES for {cen}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BER023_M1S0_R_2\n"
+     ]
+    }
+   ],
+   "source": [
+    "for t in newFts.incl_traces:\n",
+    "    if getattr(newFts, t).tap_score == 4:\n",
+    "        print(t)"
    ]
   },
   {
@@ -189,18 +219,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
     "# set variables for classification method\n",
     "MAX_TAPS_PER_TRACE = None\n",
-    "USE_FT_CLASS = newFts15\n",
+    "USE_FT_CLASS = newFts\n",
     "DATASPLIT = 'CROSSVAL'  # should be CROSSVAL or HOLDOUT\n",
     "N_RANDOM_SPLIT = 41  # 01.03.23\n",
     "\n",
     "SUBS_EXCL = ['BER028']  # too many missing acc-data\n",
-    "TRACES_EXCL = ['DUS006_M0S0_L_1']  # no score/video\n",
+    "TRACES_EXCL = ['DUS006_M0S0_L_1', 'BER023_M1S0_R_2']  # no score/video\n",
     "\n",
     "SCORE_FEW_TAPS_3 = True\n",
     "CUTOFF_TAPS_3 = 9\n",
@@ -226,7 +256,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "excl sub: BER028, led to 24 excl traces\n"
+     ]
+    }
+   ],
+   "source": [
+    "excl_sub = 'BER028'\n",
+    "excl_sub_traces = [t for t in newFts.incl_traces if t.startswith(excl_sub)]\n",
+    "print(f'excl sub: {excl_sub}, led to {len(excl_sub_traces)} excl traces')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -234,18 +283,18 @@
      "output_type": "stream",
      "text": [
       "SPLITTING DATA IN DEV AND HOLD-OUT\n",
-      "Original score distribution: {0: 40, 1: 148, 2: 107, 3: 53, 4: 3}\n",
-      "Original score %: {0: 11.4, 1: 42.2, 2: 30.5, 3: 15.1, 4: 0.9}\n",
+      "Original score distribution: {0: 40, 1: 149, 2: 106, 3: 55}\n",
+      "Original score %: {0: 11.4, 1: 42.6, 2: 30.3, 3: 15.7}\n",
       "Accepted Split: random state 41\n",
       "\n",
       "Resulting distributions in splitted data sets:\n",
       "\n",
       "\tdev data set (n = 263):\n",
       "score 0: # 30 (11 %)\n",
-      "score 1: # 108 (41 %)\n",
-      "score 2: # 82 (31 %)\n",
-      "score 3: # 41 (16 %)\n",
-      "score 4: # 2 (1 %)\n",
+      "score 1: # 109 (41 %)\n",
+      "score 2: # 81 (31 %)\n",
+      "score 3: # 43 (16 %)\n",
+      "score 4: # 0 (0 %)\n",
       "\thout data set (n = 89):\n",
       "score 0: # 10 (11 %)\n",
       "score 1: # 40 (45 %)\n",
@@ -268,13 +317,13 @@
     ")\n",
     "\n",
     "if DATASPLIT == 'CROSSVAL': SUBS_EXCL.extend(datasplit_subs['hout'])\n",
-    "elif DATASPLIT == 'HOLDOUT': SUBS_EXCL.extend(datasplit_subs['cv'])\n",
+    "elif DATASPLIT == 'HOLDOUT': SUBS_EXCL.extend(datasplit_subs['dev'])\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,13 +339,80 @@
     "        # in_cv=True\n",
     "    )\n",
     "    # select traces from subs present in current datasplit\n",
-    "    datasplit_sel = [\n",
-    "        np.array([t.startswith(s) for s in datasplit_subs['dev']]).any()\n",
-    "        for t in classf_taps_3\n",
-    "    ]\n",
+    "    if DATASPLIT == 'CROSSVAL':\n",
+    "        datasplit_sel = [\n",
+    "            np.array([t.startswith(s) for s in datasplit_subs['dev']]).any()\n",
+    "            for t in classf_taps_3\n",
+    "        ]\n",
+    "    elif DATASPLIT == 'HOLDOUT':\n",
+    "        datasplit_sel = [\n",
+    "            np.array([t.startswith(s) for s in datasplit_subs['hout']]).any()\n",
+    "            for t in classf_taps_3\n",
+    "        ]\n",
+    "    \n",
     "    TRACES_EXCL.extend(list(compress(classf_taps_3, datasplit_sel)))\n",
     "    y_pred_fewTaps = list(compress(y_pred_fewTaps, datasplit_sel))\n",
     "    y_true_fewTaps = list(compress(y_true_fewTaps, datasplit_sel))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CROSSVAL\n",
+      "Traces with not enough taps detected: ['BER025_M0S0_R_1', 'BER025_M1S0_R_3', 'BER033_M0S0_R_2', 'DUS006_M0S0_L_1', 'DUS026_M1S0_L_1', 'DUS022_M0S0_L_1']\n",
+      "corresponding true values: [3, 3, 3, 2, 1, 3]\n",
+      "corresponding predictions: [3, 3, 3, 3, 3, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "fewTaps_tracenames = list(compress(classf_taps_3, datasplit_sel))\n",
+    "print(DATASPLIT)\n",
+    "print(f'Traces with not enough taps detected: '\n",
+    "      f'{fewTaps_tracenames}')\n",
+    "print(f'corresponding true values: {y_true_fewTaps}')\n",
+    "print(f'corresponding predictions: {y_pred_fewTaps}')\n",
+    "\n",
+    "# for t in fewTaps_tracenames:\n",
+    "#     print()\n",
+    "#     print(t, getattr(newFts, t).tap_score)\n",
+    "#     t = getattr(newFts15, t)\n",
+    "#     for ft in ['tapRMS', 'raise_velocity', 'impactRMS']:\n",
+    "#         print(ft, sum(getattr(t.fts, ft)), np.mean(getattr(t.fts, ft)),\n",
+    "#               stats.variation(getattr(t.fts, ft)))\n",
+    "#     # plt.plot(t.acc_sig.T)\n",
+    "#     # plt.show()\n",
+    "#     print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HOLDOUT\n",
+      "Traces with not enough taps detected: ['BER023_M0S0_R_3', 'BER023_M0S0_R_2', 'BER023_M1S0_L_3', 'BER023_M1S0_L_2', 'BER023_M1S0_R_1', 'BER023_M1S0_R_2', 'BER023_M1S0_R_3', 'DUS017_M1S0_L_1', 'DUS017_M1S1_L_1']\n",
+      "corresponding true values: [3, 3, 3, 3, 3, 3, 3, 1, 1]\n",
+      "corresponding predictions: [3, 3, 3, 3, 3, 3, 3, 3, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(DATASPLIT)\n",
+    "print(f'Traces with not enough taps detected: '\n",
+    "      f'{list(compress(classf_taps_3, datasplit_sel))}')\n",
+    "print(f'corresponding true values: {y_true_fewTaps}')\n",
+    "print(f'corresponding predictions: {y_pred_fewTaps}')"
    ]
   },
   {
