last edits stats and figs before sending to PIs

--- a/updrsTapping_predictions.ipynb
+++ b/updrsTapping_predictions.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,14 +145,14 @@
     "# ftClass = utils_dataManagement.load_class_pickle(os.path.join(deriv_path, 'ftClass_ALL_20221214.P'))\n",
     "# ftClass10 = utils_dataManagement.load_class_pickle(os.path.join(deriv_path, 'ftClass_ALL_max10_20221214.P'))\n",
     "\n",
-    "newFts = utils_dataManagement.load_class_pickle(os.path.join(deriv_path, 'ftClass_ALL_20230301.P'))\n",
-    "newFts10 = utils_dataManagement.load_class_pickle(os.path.join(deriv_path, 'ftClass_max10_20230228.P'))\n",
+    "# newFts = utils_dataManagement.load_class_pickle(os.path.join(deriv_path, 'ftClass_ALL_20230301.P'))\n",
+    "# newFts10 = utils_dataManagement.load_class_pickle(os.path.join(deriv_path, 'ftClass_max10_20230228.P'))\n",
     "newFts15 = utils_dataManagement.load_class_pickle(os.path.join(deriv_path, 'ftClass_max15_20230228.P'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -200,6 +200,40 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "KruskalResult(statistic=0.24963841694578337, pvalue=0.6173297943179522)\n",
+      "MannwhitneyuResult(statistic=12246.0, pvalue=0.6177675167728323)\n"
+     ]
+    }
+   ],
+   "source": [
+    "### test distribution\n",
+    "\n",
+    "dev_scores = []\n",
+    "dev_scores.extend(28 * [0])\n",
+    "dev_scores.extend(106 * [1])\n",
+    "dev_scores.extend(74 * [2])\n",
+    "dev_scores.extend(40 * [0])\n",
+    "\n",
+    "val_scores = []\n",
+    "val_scores.extend(12 * [0])\n",
+    "val_scores.extend(43 * [1])\n",
+    "val_scores.extend(33 * [2])\n",
+    "val_scores.extend(14 * [0])\n",
+    "\n",
+    "print(stats.kruskal(dev_scores, val_scores)\n",
+    ")\n",
+    "print(stats.mannwhitneyu(dev_scores, val_scores))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -219,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,19 +396,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Make X input Matrix with more features for score-prediction (per Cluster)"
+    "### Make X input Matrix with more features for score-prediction"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(257, 14)\n",
+      "transformed slope_intraTapInt into absolute values\n",
+      "transformed slope_tap_entropy into absolute values\n",
+      "(96, 14)\n",
       "# of NaNs per feat: [0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n"
      ]
     }
