updated figure 3, rewritten function for mean and std err over ft-course

--- a/updrsTapping_exploring_features.ipynb
+++ b/updrsTapping_exploring_features.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,9 +39,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python sys 3.9.13 (main, Oct 13 2022, 21:23:06) [MSC v.1916 64 bit (AMD64)]\n",
+      "pandas 1.4.4\n",
+      "numpy 1.23.3\n",
+      "sci-py 1.9.1\n",
+      "sci-kit learn 1.1.2\n"
+     ]
+    }
+   ],
    "source": [
     "# check some package versions for documentation and reproducability\n",
     "print('Python sys', sys.version)\n",
@@ -51,7 +63,7 @@
     "# print('mne', mne.__version__)\n",
     "print('sci-py', scipy.__version__)\n",
     "print('sci-kit learn', sk.__version__)\n",
-    "print('matplotlib', plt_version)\n",
+    "\n",
     "\n",
     "\n",
     "## developed with:\n",
@@ -75,22 +87,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# own data preprocessing functions\n",
-    "# import tap_load_data.updrsTapping_import as tap_import\n",
-    "# import tap_load_data.tapping_preprocess as tap_preproc\n",
-    "# import tap_load_data.tapping_find_blocks as find_blocks\n",
-    "# import tap_load_data.tapping_impact_finder as tap_impact\n",
-    "# import tap_load_data.tapping_time_detect as tap_times\n",
-    "\n",
-    "\n",
     "# ft extraction\n",
-    "# import tap_extract_fts.tapping_featureset as tap_fts_set\n",
-    "# import tap_extract_fts.tapping_extract_features as tap_ft_extr\n",
-    "import tap_extract_fts.tapping_postFeatExtr_calc as postExtrCalc\n",
+    "import tap_extract_fts.tapping_postFeatExtr_calc as ft_calc \n",
     "\n",
     "# own helper functions\n",
     "import retap_utils.utils_dataManagement as utils_dataMn\n",
@@ -106,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,42 +126,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### CREATE DATA-FT CLASSES in NOTEBOOK\n",
-    "\n",
-    "# importlib.reload(mainFtExtr)\n",
-    "# importlib.reload(tap_run)\n",
-    "# importlib.reload(utils_dataManagement)\n",
-    "# importlib.reload(tap_import)\n",
-    "# importlib.reload(tap_preproc)\n",
-    "# importlib.reload(find_blocks)\n",
-    "# importlib.reload(tap_impact)\n",
-    "# importlib.reload(tap_times)\n",
-    "# importlib.reload(tap_fts_set)\n",
-    "# importlib.reload(tap_ft_extr)\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# dusdata = mainFtExtr.FeatureSet(\n",
-    "#     subs_incl = ['DUS024',],# 'DUS007'],\n",
-    "#     centers_incl = [ 'DUS', ],\n",
-    "#     verbose=False,\n",
-    "# )\n",
-    "\n",
-    "# nantest = mainFtExtr.FeatureSet(\n",
-    "#     subs_incl = ['BER019', 'BER019'],# 'DUS007'],\n",
-    "#     centers_incl = [ 'BER', ],\n",
-    "#     verbose=False,\n",
-    "# )\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -168,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,15 +152,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig_fname = 'FIG3_exFeats_exCases_single_AND_meansErrs_units'\n",
+    "importlib.reload(ft_calc)\n",
+    "\n",
+    "fig_fname = 'FIG3_featCourse_2Cases'\n",
     "\n",
     "PLOT_SINGLE_TRACES = True\n",
     "PLOT_MEANS = True\n",
-    "TO_SAVE = True\n",
+    "TO_SAVE = False\n",
     "\n",
     "subs = [\n",
     "    'BER023',\n",
@@ -203,10 +171,10 @@
     "    # 'DUS007'\n",
     "]\n",
     "ft_sel = ['impactRMS', 'raise_velocity', 'intraTapInt', 'tap_entropy']\n",
-    "ft_names = ['impact-RMS', 'raising-velocity','ITI',  'tap-entropy']\n",
+    "ft_names = ['impact-RMS', 'raising-velocity','inter-tap-interval',  'tap-entropy']\n",
     "ft_units = ['g', 'm/s/s', 's',  'a.u.']\n",
     "\n",
-    "score_colors = {0: 'lightgreen', 1: 'green',\n",
+    "score_colors = {0: 'olivedrab', 1: 'forestgreen',  #lawngreen\n",
     "                2: 'blue', 3: 'purple'}\n",
     "fsize = 16 \n",
     "fig, axes = plt.subplots(len(ft_sel), len(subs), \n",
@@ -215,7 +183,9 @@
     "                         figsize=(12, 12))\n",
     "\n",
     "for i_s, sub in enumerate(subs):\n",
-    "    axes[0, i_s].set_title(sub, fontsize=fsize+4, weight='bold',)\n",
+    "    if i_s == 0: title = 'Case A'\n",
+    "    elif i_s == 1: title = 'Case B'\n",
+    "    axes[0, i_s].set_title(title, fontsize=fsize+4, weight='bold',)\n",
     "\n",
     "    for i_f, f in enumerate(ft_sel):\n",
     "\n",
@@ -245,7 +215,7 @@
     "                 score_lists[score].append(list(values))\n",
     "\n",
     "        if PLOT_MEANS:\n",
-    "            mean_dict, err_dict = get_means_std_errs(score_lists)\n",
+    "            mean_dict, err_dict = ft_calc.get_means_std_errs(score_lists)\n",
     "            for score in mean_dict.keys():\n",
     "                axes[i_f, i_s].plot(mean_dict[score],\n",
     "                                    color=score_colors[score],\n",
@@ -276,25 +246,10 @@
     "\n",
     "if TO_SAVE:\n",
     "    plt.savefig(os.path.join(utils_dataMn.find_onedrive_path('figures'),\n",
-    "                             fig_fname),\n",
+    "                             'feature_course (fig3)', fig_fname),\n",
     "                bbox_extra_artists=(lgd,), bbox_inches='tight',\n",
-    "                dpi=300, facecolor='w',)\n",
+    "                dpi=450, facecolor='w',)\n",
     "plt.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "importlib.reload(postExtrCalc)\n",
-    "\n",
-    "for m in ['regr_slope', 'diff_in_mean']:\n",
-    "    print(m, postExtrCalc.ft_decrement(\n",
-    "        ft_array=trace.fts.tapRMS[1:20],\n",
-    "        method=m,\n",
-    "    ))"
    ]
   },
   {
@@ -565,7 +520,6 @@
    "outputs": [],
    "source": [
     "importlib.reload(plot_cluster)\n",
-    "importlib.reload(postExtrCalc)\n",
     "\n",
     "n_clusters = 2\n",
     "\n",
