updated FIG2 and 3 for submission

--- a/updrsTapping_exploring_features.ipynb
+++ b/updrsTapping_exploring_features.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,17 +135,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "importlib.reload(ft_calc)\n",
     "\n",
-    "fig_fname = 'FIG3_featCourse_2Cases'\n",
+    "fig_fname = 'FIG3_featCourse_2Cases_2704'\n",
     "\n",
     "PLOT_SINGLE_TRACES = True\n",
     "PLOT_MEANS = True\n",
-    "TO_SAVE = False\n",
+    "TO_SAVE = True\n",
+    "TO_SHOW = False\n",
     "\n",
     "subs = [\n",
     "    'BER023',\n",
@@ -155,7 +156,7 @@
     "]\n",
     "ft_sel = ['impactRMS', 'raise_velocity', 'intraTapInt', 'tap_entropy']\n",
     "ft_names = ['impact-RMS', 'raising-velocity','inter-tap-interval',  'tap-entropy']\n",
-    "ft_units = ['g', 'm/s/s', 's',  'a.u.']\n",
+    "ft_units = ['g', r'm / s${^2}$', 's',  'a.u.']\n",
     "\n",
     "score_colors = {0: 'olivedrab', 1: 'forestgreen',  #lawngreen\n",
     "                2: 'blue', 3: 'purple'}\n",
@@ -173,7 +174,7 @@
     "    for i_f, f in enumerate(ft_sel):\n",
     "\n",
     "        axes[i_f, 0].set_ylabel(r\"$\\bf{\" + str(ft_names[i_f])\n",
-    "                                + \"}$\" + f'\\n[{ft_units[i_f]}]',\n",
+    "                                + \"}$\" + f'\\n({ft_units[i_f]})',\n",
     "                                fontsize=fsize,)\n",
     "\n",
     "        # gather score values per sub, per feat\n",
@@ -218,11 +219,15 @@
     "    # create legend labels with dummy plots\n",
     "    if i_s == 0:\n",
     "        for score in score_colors.keys():\n",
-    "            axes[-1, 1].plot([], c=score_colors[score], label=f\"{score}'s\",\n",
+    "            axes[-1, 1].plot([], c=score_colors[score], label=f\"{score}\",\n",
     "                             lw=5, )\n",
     "\n",
     "        lgd = fig.legend(ncol=4, fontsize=fsize+4, frameon=False,\n",
-    "                   bbox_to_anchor=(.5, -.05), loc='lower center')\n",
+    "                   bbox_to_anchor=(.5, -.08), loc='lower center',\n",
+    "                   title='Tap scores (expert-rated)',\n",
+    "                #    title_fontsize=fsize+4,\n",
+    "                   title_fontproperties={'weight': 'bold',\n",
+    "                                         'size': fsize+2})\n",
     "\n",
     "\n",
     "plt.tight_layout()\n",
@@ -232,7 +237,8 @@
     "                             'feature_course (fig3)', fig_fname),\n",
     "                bbox_extra_artists=(lgd,), bbox_inches='tight',\n",
     "                dpi=450, facecolor='w',)\n",
-    "plt.close()"
+    "if TO_SHOW: plt.show()\n",
+    "else: plt.close()"
    ]
   },
   {
