WIP: first box plots of 4 feats

--- a/explore_retap_outcomes.ipynb
+++ b/explore_retap_outcomes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,26 +16,15 @@
     "import sklearn as sk\n",
     "import scipy\n",
     "import matplotlib.pyplot as plt\n",
-    "\n"
+    "\n",
+    "from itertools import product"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Python sys 3.9.13 (main, Oct 13 2022, 21:23:06) [MSC v.1916 64 bit (AMD64)]\n",
-      "pandas 1.4.4\n",
-      "numpy 1.23.3\n",
-      "sci-py 1.9.1\n",
-      "sci-kit learn 1.1.2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# check some package versions for documentation and reproducability\n",
     "print('Python sys', sys.version)\n",
@@ -49,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,12 +55,15 @@
     "ft_path = os.path.join(utils_dataMn.get_local_proj_dir(),\n",
     "                       'aDBS_tapping',\n",
     "                       'retap_results', 'features')\n",
-    "assert os.path.exists(ft_path), 'defined ft_path does not exist'\n"
+    "assert os.path.exists(ft_path), 'defined ft_path does not exist'\n",
+    "fig_path = os.path.join(utils_dataMn.get_local_proj_dir(),\n",
+    "                       'aDBS_tapping', 'figures')\n",
+    "if not os.path.exists(fig_path): os.makedirs(fig_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,19 +83,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "14 ['sub-529DT76' 'sub-530OE55' 'sub-531AI63' 'sub-531AI63L' 'sub-532LO56'\n",
-      " 'sub-533AI56' 'sub-536EU64' 'sub-537BI55' 'sub-538OR56' 'sub-539ER50'\n",
-      " 'sub-540AE50' 'sub-541IR68' 'sub-541IR68R' 'sub-542AC52']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "subs = np.unique([f.split('_')[1] for f in os.listdir(ft_path)])\n",
     "\n",
@@ -112,30 +94,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sub-529DT76\n",
-      "sub-530OE55\n",
-      "sub-531AI63\n",
-      "sub-531AI63L\n",
-      "sub-532LO56\n",
-      "sub-533AI56\n",
-      "sub-536EU64\n",
-      "sub-537BI55\n",
-      "sub-538OR56\n",
-      "sub-539ER50\n",
-      "sub-540AE50\n",
-      "sub-541IR68\n",
-      "sub-541IR68R\n",
-      "sub-542AC52\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "files_dict = {}\n",
     "for sub in subs:\n",
@@ -159,26 +120,88 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "box_lists = []\n",
+    "box_labels = []\n",
+    "\n",
+    "for ft, con in product(FEAT_SEL, ['off', 'on']):\n",
+    "    box_labels.append(f'{ft} {con}')\n",
+    "    values = [files_dict[s][con][ft] for s in subs]\n",
+    "    box_lists.append(values)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['triax_arr', 'fs', 'impacts', 'tap_lists', 'max_n_taps_incl', 'total_nTaps', 'freq', 'tap_durations', 'trace_RMSn', 'trace_entropy', 'intraTapInt', 'tapRMS', 'tapRMSnrm', 'impactRMS', 'raise_velocity', 'jerkiness_taps', 'jerkiness_trace', 'tap_entropy', 'mean_tapRMS', 'coefVar_tapRMS', 'IQR_tapRMS', 'decr_tapRMS', 'slope_tapRMS', 'mean_tapRMSnrm', 'coefVar_tapRMSnrm', 'IQR_tapRMSnrm', 'decr_tapRMSnrm', 'slope_tapRMSnrm', 'mean_impactRMS', 'coefVar_impactRMS', 'IQR_impactRMS', 'decr_impactRMS', 'slope_impactRMS', 'mean_raise_velocity', 'coefVar_raise_velocity', 'IQR_raise_velocity', 'decr_raise_velocity', 'slope_raise_velocity', 'mean_intraTapInt', 'coefVar_intraTapInt', 'IQR_intraTapInt', 'decr_intraTapInt', 'slope_intraTapInt', 'mean_jerkiness_taps', 'coefVar_jerkiness_taps', 'IQR_jerkiness_taps', 'decr_jerkiness_taps', 'slope_jerkiness_taps', 'mean_tap_entropy', 'coefVar_tap_entropy', 'IQR_tap_entropy', 'decr_tap_entropy', 'slope_tap_entropy'])"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "files_dict['sub-529DT76']['on'].keys()"
+    "method = 'norm'\n",
+    "\n",
+    "for i_ft, ft in enumerate(FEAT_SEL):\n",
+    "\n",
+    "    off = box_lists[i_ft * 2]\n",
+    "    on = box_lists[i_ft * 2 + 1]\n",
+    "\n",
+    "    if method == 'norm':\n",
+    "        norm_value = np.nanmax(off)\n",
+    "        off = np.array(off) / norm_value\n",
+    "        on = np.array(on) / norm_value\n",
+    "    elif method == 'std':\n",
+    "        norm_m = np.nanmean(off)\n",
+    "        norm_sd = np.nanstd(off)\n",
+    "        off = (np.array(off) - norm_m) / norm_sd\n",
+    "        on = (np.array(on) - norm_m) / norm_sd\n",
+    "\n",
+    "    box_lists[i_ft * 2] = off\n",
+    "    box_lists[i_ft * 2 + 1] = on"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SCATTER = True\n",
+    "SCATTER_LINES = True\n",
+    "\n",
+    "fig_name = f'firstRun_4feats_cDBSOffvsOn_{method}'\n",
+    "\n",
+    "fig, ax = plt.subplots(1, 1, figsize=(8, 6))\n",
+    "\n",
+    "fontsize=14\n",
+    "\n",
+    "ax.boxplot(box_lists, positions=np.arange(len(box_lists)),)\n",
+    "ax.set_xticklabels(box_labels, rotation=90,\n",
+    "                   size=fontsize)\n",
+    "if method == 'norm':\n",
+    "    ylabel = 'Normalised feature values\\n(against max OFF value)'\n",
+    "elif method == 'std':\n",
+    "    ylabel = 'Standardised feature values\\n(against OFF values)'\n",
+    "\n",
+    "if SCATTER:\n",
+    "    for i_x, values in enumerate(box_lists):\n",
+    "        ax.scatter([i_x] * len(values), values,\n",
+    "                   alpha=.3)\n",
+    "if SCATTER_LINES:\n",
+    "    for i_ft in np.arange(len(FEAT_SEL)):\n",
+    "        for i_sub in np.arange(len(box_lists[i_ft])):\n",
+    "            y1 = box_lists[i_ft * 2][i_sub]\n",
+    "            y2 = box_lists[i_ft * 2 + 1][i_sub]\n",
+    "            ax.plot([i_ft*2, i_ft*2+1], [y1, y2],\n",
+    "                    c='gray', alpha=.3)\n",
+    "\n",
+    "ax.set_ylabel(ylabel,\n",
+    "              size=fontsize)\n",
+    "\n",
+    "plt.tick_params(axis='both', labelsize=fontsize, size=fontsize)\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "\n",
+    "plt.savefig(os.path.join(fig_path, fig_name), dpi=300,\n",
+    "            facecolor='w',)\n",
+    "plt.close()"
    ]
   }
  ],
